# remfile

./: .gitignore  README.md  pyproject.toml  pytest.ini  setup.py
.devcontainer/: Dockerfile  devcontainer.json  environment.yml
.github/: tests.yml
.github/workflows/: benchmarks.yml  tests.yml
benchmarks/: README.md  benchmarks.py  environment.yml  results_on_github_codespace.txt
devel/: publish_pypi.sh
examples/: example1.py  example1_compare_fsspec.py  example2.py
remfile/: DiskCache.py  RemFile.py  __init__.py
tests/: test_main.py
