[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "remfile"
description = "File-like object from url of remote file, optimized for use with h5py."
authors = [{ name = "Jeremy Magland", email = "jmagland@flatironinstitute.org" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["hdf5", "file-like"]
requires-python = ">=3.6"
dynamic = ["version", "readme"]
dependencies = [
    "requests",
    "h5py"
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov"
]

[project.urls]
repository = "https://github.com/magland/remfile"

[tool.setuptools.packages.find]
include = ["remfile*"]
exclude = ["devel", "tests"]

[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type = "text/markdown"}
version = {attr = "remfile.__version__"}